--- a/view/src/assets/style/common.scss
+++ b/view/src/assets/style/common.scss
@@ -2,12 +2,14 @@
 @import '@/theme/index.scss';
 .layout-container {
   background-color: var(--system-container-main-background);
-  width: calc(100% - 30px);
-  height: calc(100% - 30px);
-  margin: 15px;
+  width: calc(100% - 10px);
+  height: calc(100% - 10px);
+  margin: 5px;
   display: flex;
   flex-direction: column;
   overflow-y: auto;
+  border-radius: 3px;
+  
   &-form {
     display: flex;
     justify-content: space-between;
@@ -119,7 +121,7 @@ a {
 }
 
 .btn-item {
-    width: 100px;
+    width: 120px;
     height: 40px;
     line-height: 40px;
 
@@ -141,14 +143,28 @@ a {
 }
 
 .btn-item .icon {
-    margin-top: 3px; 
-    margin-right: 5px;
+    width: 20px;
+    text-align: center;
 }
+
+.btn-item .text {
+    width: 80px;
+    text-align: center;
+}
+
+
+
 
 
 .btn-item-active {
     background-color: #515151;
 }
 
+.el-header {
+  box-shadow: 0 1px 0 #d0d7de;
+}
 
+.el-main-box {
+  background-color: #eaeaea;
 
+}
